# graphrag-lite

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: ubuntu.yml
docs/: tech.md
examples/: demo_en.py  demo_zh.py
graphrag_lite/: __init__.py  core.py  prompts.py
nanographrag/: __init__.py  core.py  utils.py
tests/: test_graphrag.py
